# stock-analyzer

./: LICENSE  README.md  pyproject.toml  validate.py
src/: config.py
src/analysis/: elasticity.py  mine_sweeper.py  scoring.py  screening.py  valuation.py  warnings.py
src/cache/: sqlite_cache.py
src/data_sources/: adapter.py  akshare.py  baostock.py  base.py  sina.py  tushare.py
src/indicators/: calculator.py
src/models/: financial.py
tests/: test_analysis.py  test_data_sources.py  test_phase3.py
