[project]
name = "stock-analyzer"
version = "0.1.0"
description = "A股低估值周期投资策略分析工具"
requires-python = ">=3.10"
dependencies = [
    "tushare>=1.3.0",
    "baostock>=0.8.8",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "akshare>=1.18.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
